[package]
name = "dyf"
version = "0.1.0"
edition = "2024"
keywords = ["dynamic", "format", "string"]
description = "Dynamic string formatting library for Rust supporting all standard format specifiers"
readme = "README.md"
repository = "https://github.com/qjerome/dyf"
documentation = "https://docs.rs/dyf"
license = "GPL-3.0"
rust-version = "1.85.0"

[dependencies]
pest = "2.8.1"
pest_derive = "2.8.1"
thiserror = "2.0.12"
